css/styles.css
body, .navbar-light {
	color: #343434 !important;
}

.post-header img {
	margin-top: 30px;
	margin-bottom: 40px;
}

#main-container
{
	padding-top: 200px;
	padding-left: 60px;
}

#primary-column {

	padding-right: 40px;
	padding-top: 60px;
	/* background-color: green; */
	/* border-right: 1px dotted grey;*/

	background-image: linear-gradient(#171717 10%, rgba(255,255,255,0) 0%);
	background-position: right;
	background-size: 1px 8px;
	background-repeat: repeat-y;
}

#sidebar {
	padding-top: 0px;
	padding-left: 40px;
}

h1 {
  font-family: "atrament-web","atrament";
  font-size: 3rem;
  margin-bottom: 0;
}

p {
	font-family: "open-sans","Open Sans";
	font-size: 1.125rem;
}

nav {
	font-family: "atrament-web","atrament";
 	font-size: 0.9375rem;
 	background: white;
 	text-transform: uppercase;
 	letter-spacing: 2px; 

}

.date
{
	font-family: "open-sans";
	font-size: 0.8125rem;
}

blockquote {
	border: none !important;
}
blockquote p {
	font-family: "atrament-web","atrament";
 	font-size: 2.125rem;
 	font-style: italic;
 	font-weight: 800;

}

.navbar
{
	padding-top: 50px;
	padding-left: 40px;
}

nav .nav-item
{
	margin-right: 40px;
	padding-left: 10px;
	padding-right: 10px;

}



.navbar .navbar-nav
{
	padding-bottom: 30px;
}

.navbar .nav-link.active
{
	border-bottom: 2px solid #D20298;
}

#footer {
	margin-top: 200px;
	background: #333333 url("../img/footer@2x.jpg") bottom left no-repeat;
	background-size: 1024px 132px;
	width: 100%;
	height:132px;

}

.shadow {
	-moz-box-shadow: 0px 2px 32px 11px #e0e0e0; 
	-webkit-box-shadow: 0px 2px 32px 11px #e0e0e0; 
	box-shadow: 0px 2px 32px 11px #e0e0e0; 
	/* Alas, box-shadow is not fully supported by IE < 9 */
}

